[package]
name = "lianpkg"
version = "0.3.2"
edition = "2024"

[dependencies]
byteorder = "1.5.0"
chrono = "0.4.42"
image = "0.25.9"
lz4_flex = "0.12.0"
texture2ddecoder = "0.1.2"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "5.0"
fs2 = "0.4"
human_bytes = "0.4"
clap = { version = "4.5", features = ["derive"] }
libc = "0.2.178"
serde_json = "1.0.147"

[lib]
name = "lianpkg"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "lianpkg"
path = "src/main.rs"

[profile.release]
opt-level = "z"
lto = "thin"
codegen-units = 1
strip = "debuginfo"
panic = "abort"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
