[package]
name = "lianpkg"
version = "0.4.3"
edition = "2021"

[dependencies]
byteorder = "1.5.0"
chrono = { version = "0.4.42", default-features = false, features = ["clock"] }
image = { version = "0.25.9", default-features = false, features = ["png"] }
lz4_flex = "0.12.0"
texture2ddecoder = "0.1.2"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "5.0"
fs2 = "0.4"
human_bytes = "0.4"
clap = { version = "4.5", features = ["derive"] }
serde_json = "1.0.147"
unicode-width = "0.2"

[lib]
name = "lianpkg"
path = "src/lib.rs"
crate-type = ["rlib"]

[[bin]]
name = "lianpkg"
path = "src/main.rs"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
